fixed Mrs. White being invisible

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -115,10 +115,10 @@
     background: green;
 }
 #mrs_white {
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
     -webkit-border-radius: 25px;
     -moz-border-radius: 25px;
     border-radius: 25px;
-    border: black;
+    border: solid 1px;
 }
